--- a/styling/index.css
+++ b/styling/index.css
@@ -1458,7 +1458,7 @@ button.secondary:hover {
     flex-shrink: 0;
     position: absolute;
     bottom: 0;
-    padding-bottom: calc(1rem + env(safe-area-inset-bottom, 0px));
+    padding-bottom: env(safe-area-inset-bottom, 0px);
     left: 0;
     right: 0;
     z-index: 10;
